ticekt #274 css issue on topic/camp history page on mobile

--- a/src/components/ComponentPages/HistoryContainer/campHistory.module.scss
+++ b/src/components/ComponentPages/HistoryContainer/campHistory.module.scss
@@ -306,6 +306,8 @@
       & > div {
         & > h5 {
           line-height: 16px;
+          word-break: break-all;
+          padding-right: 5px;
         }
 
         & > h2 {
